--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -4,7 +4,7 @@ license="Apache License version 2.0"
 
 [[mods]]
 modId="fake_fps"
-version="1.0.8"
+version="1.1.0"
 displayName="Fake FPS"
 displayURL="https://github.com/Dreyka-Oas/Fake-FPS"
 logoFile="logo.png"
@@ -18,14 +18,14 @@ description="Customizable fake FPS display."
 [[dependencies.fake_fps]]
     modId="neoforge"
     type="required"
-    versionRange="[21.1.65,)"
+    versionRange="[21.4.78-beta,)"
     ordering="AFTER"
     side="BOTH"
 
 [[dependencies.fake_fps]]
     modId="minecraft"
     type="required"
-    versionRange="[1.21.1]"
+    versionRange="[1.21.4]"
     ordering="AFTER"
     side="BOTH"
 
